--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "ag-grid-community": "^31.2.0",
     "ag-grid-enterprise": "^31.2.0",
     "ag-grid-react": "^31.2.0",
+    "bootstrap": "^5.3.3",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-bootstrap": "^2.10.2",
+    "react-dom": "^18",
+    "react-papaparse": "^4.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
