--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
 Django==4.2.11
+djangorestframework==3.15.1
 et-xmlfile==1.1.0
 filelock==3.13.3
 flatbuffers==24.3.25
@@ -24,6 +25,7 @@ keras==2.13.1
 libclang==18.1.1
 Markdown==3.6
 MarkupSafe==2.1.5
+mysql-connector-python==8.3.0
 numpy==1.24.3
 oauthlib==3.2.2
 opt-einsum==3.3.0
