--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18",
     "react-papaparse": "^4.4.0"
   },
