--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ag-grid-community/styles": "^31.2.0",
     "@ag-grid-enterprise/row-grouping": "^31.2.0",
     "@ag-grid-enterprise/server-side-row-model": "^31.2.0",
+    "ag-charts-react": "^9.2.1",
     "ag-grid-community": "^31.2.0",
     "ag-grid-enterprise": "^31.2.0",
     "ag-grid-react": "^31.2.0",
@@ -20,7 +21,6 @@
     "next": "14.1.4",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
-    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18",
     "react-papaparse": "^4.4.0"
   },
